# forage-dj

./: .env  .gitignore  CHANGELOG.md  GENERATION_RELIABILITY_STATUS_AND_PLAN.md  GROK_SESSION.md  LICENSE  README.md  pyproject.toml
.grok/: AUTONOMOUS_SESSION_2026-05-30.md  PLAN.md  README.md  hf-cache.env  hf-cache.ps1  hf-token.env
.grok/swarm-outputs/: audio-gen-agent-019e7a00-3f8e-7860-a884-ca10b8fb7297.md  mixer-gui-agent-019e7a00-4c1a-7ba0-bb9a-860ec237b7c4.md  setlist-walkaway-improvements-019e7a0x.md  swarm-download-checkpoints-report-2026-05-30.md
agent/: AGENT_START_HERE.md  BUILD_WORKFLOW.md  TESTING_GUIDE.md
agent/PROMPTS/: debugging_prompts.md  feature_implementation_prompts.md  generation_prompts.md
agent/hermes-comfy-autonomous/: AGENT_START_HERE.md  AUTONOMOUS_TASKS.md  BRANCH_STRATEGY.md  CURRENT_DIRECTION.md  HOW_TO_USE_REMOTELY.md  REMOTE_COMFYUI.md  WHAT_DIDNT_WORK.md  WHAT_WORKED.md
agent/hermes-comfy-autonomous/PLANS/: comfyui-first-autonomous-plan.md
assets/logos/: README.md
data/ai_dj_personalities/: personalities.json
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: AGENTIC_BUILD_PLAN.md  AGENTIC_GENERATION_RELIABILITY_PLAN.md  ARCHITECTURE.md  COMFYUI_SETUP.md  DOCKER_DEPLOYMENT.md  ENHANCEMENT_TOOLS.md  EVENT_TOUR_SYSTEM.md  FEATURES_SPEC.md  HARDWARE_NS7II.md  HERMES_INTEGRATION.md  INSTALL.md  LAUNCH_AND_STREAMING_STRATEGY.md  LAUNCH_CHECKLIST.md  LIVE_STREAMING_GUIDE.md  MEDIA_PLAYER.md  MISSION_GUIDE.md  MODEL_ACCESS.md  RESEARCH_DAW_CONTROLLERS_VISUALIZERS.md  RESEARCH_SUMMARY.md  ROADMAP.md  RUNPOD_DEPLOYMENT.md  SWARM_STATUS.md  TASK_COMPLETION_MATRIX.md  TERMINAL_DJ_IDE.md  WHITEPAPER.md  WORKSTATION.md
integrations/avatars/: README.md  avaturn_stub.py
integrations/hyperframes/: README.md
integrations/hyperframes/scripts/: rex_intro.py
integrations/kick/: README.md
integrations/midi-automap/: README.md
integrations/openpets/: README.md
integrations/openpets/pet-packs/: bloom-dj-concept.md  neon-dj-concept.md
integrations/twitch/: README.md
libraries/Bassline_Dominion_-_House_Ignition_Seed_424242/: library.json
libraries/Bassline_Dominion_Alternate_Universe_Seed777777/: library.json  playlist.txt
libraries/Bassline_Dominion_House_Ignition_Seed424242/: library.json  playlist.txt
libraries/Test_Generation_Mix_Small_Medium_SFX_Seed424242/: library.json  playlist.txt
public/seeds/: Autonomous_Badass_Test_Session_seed.json
scripts/: README.md  backup_forage_dj.sh  download_checkpoints.py  install.py  launch_comfyui.sh  runpod_deploy.py  setup.ps1  setup.sh  swarm_distributor.py  tour_find.py  use_comfy.sh
scripts/radio/: Forage-Radio.ps1  Launch-Forage-Radio.bat  README.md  forage_radio.py  launch_radio.sh
sessions/Autonomous_Badass_Test_Session/: session.json
sessions/TestSession/: session.json
sessions/Test_Ableton_Style_Session/: session.json
sessions/beta-experimental/: session.json
sessions/legacy-stable-audio/: session.json
sessions/main-comfy-autonomous/: session.json
setlists/: bassline_dominion_seed424242.yaml  bassline_dominion_seed777777.yaml  test_generation_mix.yaml
skills/pr-launch-and-streaming/: SKILL.md
skills/runpod-forage-dj/: SKILL.md
skills/swarm-distribution/: SKILL.md
src/foragedj/: __init__.py  agent.py  analysis.py  audio_gen.py  cli.py  comfy_client.py  config.py  enhance.py  gui.py  health.py  local_medium_gen.py  mixer.py  paths.py  personalities.py  player.py  setlist.py  utils.py  visualizer.py  voice.py  workstation.py
src/foragedj/hardware/: __init__.py  midi.py  osc.py
src/foragedj/os/: __init__.py  __main__.py  app.py
test_outputs/model_benchmarks/: GPU_SCAN.md  run_model_speed_test.py
tests/: test_health.py  test_setlist.py
workflows/comfy/: README.md  audio_ace_step1_5_xl_turbo_API.json
