[project]
name = "forage-dj"
version = "0.1.0"
description = "Sonic Forage AI-powered autonomous DJ interface/DAW"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "stable-audio-3>=0.1",  # placeholder - actual from Stability-AI when released
    "sounddevice>=0.4.6",
    "python-rtmixer>=0.1.0",
    "pedalboard>=0.9.0",
    "librosa>=0.10.0",
    "mido>=1.3.0",
    "python-rtmidi>=1.5.0",
    "faster-whisper>=1.0.0",
    "demucs>=4.0.0",
    "dearpygui>=1.11.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
]

[project.optional-dependencies]
cuda = ["torch>=2.4.0", "torchaudio>=2.4.0"]
cpu = ["torch>=2.4.0 --index-url https://download.pytorch.org/whl/cpu"]

[project.scripts]
foragedj = "foragedj.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
index-url = "https://pypi.org/simple"

[tool.hatch.build.targets.wheel]
packages = ["src/foragedj"]
