[project]
name = "forage-dj"
version = "0.1.0"
description = "Sonic Forage AI-powered autonomous DJ interface/DAW"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Sonic Forage Collective" },
]
dependencies = [
    # Core real-time audio + hardware foundation (MVP Phase 1 minimal set)
    # NOTE: python-rtmixer removed from core — it has poor packaging / no recent wheels.
    #       Real-time low-latency mixer will use sounddevice + pedalboard + threads
    #       (more reliable across Python versions). rtmixer can return later as optional.
    "sounddevice>=0.4.6",
    "pedalboard>=0.9.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.1",  # Required for reliable librosa loading (used by analysis, mixer, workstation auto-split)
    "mido>=1.3.0",
    "python-rtmidi>=1.5.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
]

[project.optional-dependencies]
# GUI (Dear PyGui is fast native for potato machines — per ARCHITECTURE)
gui = ["dearpygui>=1.11.0"]

# Voice / STT (Phase 2+)
voice = ["faster-whisper>=1.0.0"]

# Stem separation (Phase 3+)
stems = ["demucs>=4.0.0"]

# Audio enhancement + TTS (new 2025 stack: FlashSR, AudioSR, LocalVQE, Kokoro)
# Note: Kokoro also needs system package `espeak-ng` for phonemization.
audio-tools = ["kokoro>=0.9.0"]  # soundfile is now core for analysis/workstation reliability

# Generation extras (for the reliable public "open" / stable-audio-open-1.0 path via diffusers)
# Usage: uv pip install -e ".[generation]"   or just `uv pip install diffusers` (recommended for now)
generation = ["diffusers>=0.29.0"]

# MIDI/OSC controllers + Resolume integration
controllers = ["python-osc>=1.8.0"]

# Full meta extra for convenience
full = ["forage-dj[gui,voice,stems,audio-tools]"]
os = [
    "textual>=8.2.7",
]

# NOTE on generation (stable-audio-3):
# This is intentionally NOT listed here. The official library is not on PyPI.
# See scripts/setup.sh and docs/ for the recommended clone + editable install flow.
# Runtime code in audio_gen.py will give a precise actionable error + instructions.

# NOTE on stable-audio-open (new recommended default "open" model, Track 3):
# Uses diffusers.StableAudioPipeline (standard, reliable, no custom T5Gemma conditioner headaches).
# Add via: uv pip install diffusers
# (or add "diffusers>=0.29.0" to your uv sync extras). The open model snapshot lands in checkpoints/stable-audio-open-1.0/
# per paths.py Z: rules. See audio_gen.py for the loader.

[project.scripts]
foragedj = "foragedj.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foragedj"]

[tool.uv]
index-url = "https://pypi.org/simple"

# Proper PyTorch CPU wheel support (fixes the old invalid cpu extra)
# Usage: uv sync --extra gui --group dev
# For CUDA users: manually `uv pip install torch torchaudio --index-url https://download.pytorch.org/whl/cu126` then sync (or customize below)
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "huggingface-hub>=1.17.0",
    "hf-transfer>=0.1.9",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter
